--- a/src/components/NavigatorLateral.css
+++ b/src/components/NavigatorLateral.css
@@ -1,13 +1,15 @@
-/* src/components/NavigatoLateral.css */
 .navigator-lateral {
   position: fixed;
-  top: 0;
   left: 0;
-  height: 100%;
-  width: 200px;
-  background-color: #2c3e50;
-  padding-top: 20px;
+  top: 0;
+  height: 100vh;
+  width: 300px; /* Alinhe a largura ao valor desejado */
+  background-color: #10579e;
+  padding-top: 50px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navigator-lateral ul {
@@ -23,10 +25,11 @@
 .navigator-lateral li a {
   color: white;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 20px;
   display: block;
 }
 
-.navigator-lateral li a:hover {
-  background-color: #34495e;
+.imagem-logo {
+  width: 8rem !important;
+  height: auto;
 }
