--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,4 +1,3 @@
-/* Reset básico e layout global */
 * {
   margin: 0;
   padding: 0;
@@ -16,30 +15,28 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  overflow-y: auto; /* Habilita a rolagem para o corpo da página */
+  overflow-y: auto;
 }
 
-/* Scroll Global */
 body::-webkit-scrollbar {
-  width: 8px; /* Largura da barra de rolagem */
+  width: 8px;
 }
 
 body::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Cor de fundo da trilha */
+  background-color: #f1f1f1;
   border-radius: 10px;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #3498db; /* Cor do "thumb" */
+  background-color: #3498db;
   border-radius: 10px;
   transition: background-color 0.3s ease;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-  background-color: #2980b9; /* Cor quando passar o mouse */
+  background-color: #2980b9;
 }
 
-/* Modal Overlay */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -53,7 +50,6 @@ body::-webkit-scrollbar-thumb:hover {
   z-index: 1000;
 }
 
-/* Conteúdo do modal */
 .modal-content {
   background: #fff;
   padding: 25px;
@@ -66,27 +62,25 @@ body::-webkit-scrollbar-thumb:hover {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
-/* Scroll no Modal */
 .modal-content::-webkit-scrollbar {
-  width: 6px; /* Largura da barra de rolagem no modal */
+  width: 6px;
 }
 
 .modal-content::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Cor de fundo da trilha do modal */
+  background-color: #f1f1f1;
   border-radius: 5px;
 }
 
 .modal-content::-webkit-scrollbar-thumb {
-  background-color: #3498db; /* Cor do thumb do modal */
+  background-color: #3498db;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .modal-content::-webkit-scrollbar-thumb:hover {
-  background-color: #2980b9; /* Cor ao passar o mouse */
+  background-color: #2980b9;
 }
 
-/* Fechar o modal */
 .modal-close {
   background: none;
   border: none;
@@ -98,14 +92,12 @@ body::-webkit-scrollbar-thumb:hover {
   color: #333;
 }
 
-/* Títulos dentro do modal */
 h3 {
   margin-bottom: 20px;
   color: #333;
   text-align: center;
 }
 
-/* Seção de informações gerais (caso, suspeito, etc.) */
 .modal-section {
   margin-bottom: 15px;
   padding: 10px;
@@ -124,11 +116,6 @@ h3 {
   font-size: 0.95rem;
 }
 
-.modal-section hr {
-  border: 0.5px solid #ddd;
-}
-
-/* Ações do modal (botões de editar e excluir) */
 .modal-actions {
   display: flex;
   justify-content: space-between;
@@ -153,7 +140,6 @@ h3 {
   background: #1c6f9c;
 }
 
-/* Adicionando um ícone de interrogação nas seções */
 .modal-section span {
   cursor: pointer;
   color: #bbb;
@@ -165,7 +151,6 @@ h3 {
   color: #3498db;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
   .modal-content {
     width: 100%;
