--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+.app-container {
+  height: 100vh;
+  width: 100%;
+  overflow-y: auto;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -36,6 +42,19 @@ body {
   max-height: 100vh;
   background-color: #ededed;
 }
+
+.fullbody {
+  display: flex;
+  flex-direction: row;
+}
+
+.left-content {
+  margin-left: 10px; /* Largura do menu lateral */
+  padding: 20px;
+  flex-grow: 1;
+}
+
+
 
 .flex-col {
   display: flex;
@@ -345,3 +364,4 @@ option:hover {
     width: 100%;
   }
 }
+
